--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@ function buildTeamsContent(){
         if(!allData[selectedDate]) allData[selectedDate]={};
         team.employees.forEach(emp=>{
           if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-          allData[selectedDate][emp.id].site=team.site;
-          allData[selectedDate][emp.id].in=team.siteIn;
-          allData[selectedDate][emp.id].out=team.siteOut;
+          allData[selectedDate][emp.id].site = team.site;
+          allData[selectedDate][emp.id].in = team.siteIn;
+          allData[selectedDate][emp.id].out = team.siteOut;
         });
         localStorage.setItem("allData", JSON.stringify(allData));
         buildEmployeeTable(filterInput.value.trim().toLowerCase());
@@ -206,7 +206,27 @@ function buildTeamsContent(){
       teamDiv.appendChild(wrap);
     }
 
-    // Employee list
+    // Employee dropdown
+    const empSelect = document.createElement("select");
+    const defaultOption = document.createElement("option"); defaultOption.textContent="Select Employee"; defaultOption.value=""; empSelect.appendChild(defaultOption);
+    masterEmployees.forEach(name=>{
+      const option = document.createElement("option"); option.value=name; option.textContent=name; empSelect.appendChild(option);
+    });
+    const addBtn = document.createElement("button"); addBtn.textContent="➕ Add Employee";
+    addBtn.onclick = ()=>{
+      const selectedName = empSelect.value;
+      if(!selectedName) return alert("Select employee from dropdown");
+      if(team.employees.find(e=>e.name===selectedName)) return alert("Employee already in this team");
+      const emp={id:Date.now(), name:selectedName, team:team.name, site:""};
+      team.employees.push(emp);
+      localStorage.setItem("teams", JSON.stringify(teams));
+      buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
+    };
+
+    teamDiv.appendChild(empSelect);
+    teamDiv.appendChild(addBtn);
+
+    // Employee list display
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
@@ -217,29 +237,15 @@ function buildTeamsContent(){
       ul.appendChild(li);
     });
 
-    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployeeToTeam(team.name);
-    teamDiv.appendChild(ul); teamDiv.appendChild(addBtn);
-
     new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
       const empId=evt.item.dataset.empId;
       const newTeamName=evt.to.dataset.team;
       moveEmployeeToTeam(empId,newTeamName);
     }});
 
+    teamDiv.appendChild(ul);
     menu.appendChild(teamDiv);
   });
-}
-
-// Add employee from master list
-function addEmployeeToTeam(teamName){
-  if(masterEmployees.length===0) return alert("Add employees in Master List first");
-  let name = prompt("Select employee from master list:\n"+masterEmployees.join("\n"));
-  if(!name || !masterEmployees.includes(name)) return alert("Invalid selection");
-  const emp={id:Date.now(), name:name, team:teamName, site:""};
-  const team=teams.find(t=>t.name===teamName); team.employees.push(emp);
-  localStorage.setItem("teams", JSON.stringify(teams));
-  buildTeamsContent();
-  buildEmployeeTable(filterInput.value.trim().toLowerCase());
 }
 
 // Move employee between teams
@@ -257,7 +263,7 @@ function moveEmployeeToTeam(empId,newTeamName){
 }
 
 // ==========================
-// Table
+// Table functions
 const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
@@ -299,7 +305,6 @@ function calculateHours(inInput,outInput,totalCell,overtimeCell){
   totalCell.style.background=""; overtimeCell.style.background="";
   const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
-  const d=new Date(selectedDate);
   const overtime=(diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
   return [diff,overtime];
 }
@@ -334,10 +339,16 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 
 // ==========================
 // Share Team Count
+
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
+  // Save current teams data before opening view
   localStorage.setItem("teams", JSON.stringify(teams));
-  window.open("team_count.html?date="+selectedDate,"_blank");
+  localStorage.setItem("allData", JSON.stringify(allData));
+  
+  // Open team count view page with current selected date
+  window.open("team_count.html?date=" + selectedDate, "_blank");
 });
+
 
 // ==========================
 // Initialize
